2012-04-20 Michel Trottier-McDonald <mtm@cern.ch>
	* Extensively modified LHSkim.py to meet lephad requirements
	* Added AllTriggers condition, which is just a big OR of all needed triggers

2012-04-18 Michel Trottier-McDonald <mtm@cern.ch>
	* Renamed muLHSkim to LHSkim
	* Slightly changed run restrictions in trigger requirements to
	capture all MC runs
	* Added no trigger requirement for 2012 runs
	* Added *_skimselection as placeholders for the object requirement
	done in skimming
	* Added back the L1_* and L2_* trigger bits as well

2012-04-17 Michel Trottier-McDonald <mtm@cern.ch>
	* Cleaned up the lephad section of datasets.cfg, adapted to ehad +
	muhad
	* Adapted muLHSkim.py
	* Corrected run error in the mu data trigger filter

2012-04-12 Michel Trottier-McDonald <mtm@cern.ch>
	* Implemented the run_mc_lh.py and run_data_lh.py scripts
	* Added back the EF_* block and the trig_* block in the skims

2012-04-09 Michel Trottier-McDonald <mtm@cern.ch>
	* Migrating from atlasoff to atlasgrp
	* Splitting Processor Trees into testing and training trees

2012-04-07 Michel Trottier-McDonald <mtm@cern.ch>
	* Patched up the overlap removal order, to correct the muon and tau overlaps

2012-04-02 Michel Trottier-McDonald <mtm@cern.ch>
	* Migration to the ATLAS HSG4 SVN
	* Setting tauBDTJetScore back to medium in preselection
	* Adding MET in the Processor files
	* Fixed the histogram matching bins
	* Now requiring pt>18GeV for matched EFMG object, although that isn't quite enough
	* Putting back the trig_* block in the skim: I need it for muon trigger matching
	* Adding the electron triggers into the MC D3PD skims
	* Removing the tau_OtherTrk_* block from the D3PD skims

2012-03-06 Michel Trottier-McDonald <mtm@cern.ch>
	* Adding muLHProcessor.py : Event quality and object selection
	* Adding higgstautau/lephad/models.py
	* Adding test-lhskim.sh

2012-02-23 Michel Trottier-McDonald <mtm@cern.ch>